fix(about me): float portrait left on tablet

--- a/style/about.css
+++ b/style/about.css
@@ -3,15 +3,16 @@ body {
   color: var(--primary-dark);
 }
 
-.about-grid {
+.about-text {
   display: grid;
-  gap: 0.5rem;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 img.portrait {
-  max-width: 400px;
-  width: 100%;
-  justify-self: center;
+  max-width: 300px;
+  margin: 0 auto;
+  grid-row: 2;
 }
 
 .skills-grid {
@@ -85,19 +86,26 @@ button.resume svg {
   --footer-hover: var(--primary);
 }
 
-/* Small laptops (1024px and up) */
-@media (min-width: 1024px) {
-  .about-grid {
-    grid-template-columns: 7fr 3fr;
+/* Tablet (768px and up) */
+@media (min-width: 768px) {
+  .about-text {
+    display: block;
   }
 
-  .about-grid p {
-    grid-column: 1 / 2;
+  .about-text p + p {
+    margin-top: 1rem;
   }
 
   img.portrait {
-    max-width: 100%;
-    grid-row: 1 / 7;
-    grid-column: 2 / 3;
+    float: left;
+    float:inline-start;
+    padding: 0 2rem;
+    max-width: 300px;
   }
+
+}
+
+/* Small laptops (1024px and up) */
+@media (min-width: 1024px) {
+
 }
